[workspace]
members = [
    "lib/common",
    "pkg/brave_search",
    "pkg/context7",
    "pkg/fetch",
    "pkg/fetch_markdown",
    "pkg/filesystem",
    "pkg/markdown",
    "pkg/myip",
    "pkg/ollama",
    "pkg/time",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "A collection of reusable WASI components for common functionality"
authors = ["Dinesh Bhattarai <dinesh.db@gmail.com>"]
license = "MIT"
keywords = ["wasi", "wasm", "components", "webassembly", "reusable"]
categories = ["wasm", "development-tools", "web-programming"]
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
common = { path = "lib/common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spin-executor = "3.0.1"
spin-sdk = "3.0.1"
thiserror = "2.0"
uuid = { version = "1.16.0", features = ["v4"] }
wit-bindgen-rt = { version = "0.26.0", features = ["bitflags"] }

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true
