[package]
name = "common"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
scraper = "0.18"
serde.workspace = true
serde_json.workspace = true
spin-sdk.workspace = true
