[package]
name = "brave-search"
license = "MIT"
version.workspace = true
edition.workspace = true

[package.metadata.component]
package = "component:brave-search"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
spin-executor = "3.0.1"
spin-sdk = "3.0.1"
urlencoding = "2.1"
wit-bindgen-rt.workspace = true
