[package]
name = "context7"
license = "MIT"
version.workspace = true
edition.workspace = true

[package.metadata.component]
package = "component:context7"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json.workspace = true
spin-executor = "3.0.1"
spin-sdk = "3.0.1"
urlencoding = "*"
wit-bindgen-rt.workspace = true
