[package]
name = "duckduckgo"
license = "MIT"
version.workspace = true
edition.workspace = true

[package.metadata.component]
package = "component:duckduckgo"

[lib]
crate-type = ["cdylib"]

[dependencies]
common.workspace = true
lazy_static.workspace = true
regex = "1.10"
spin-executor = "3.0.1"
urlencoding = "2.1"
wit-bindgen-rt.workspace = true
