[package]
name = "fetch-markdown"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
spin-executor.workspace = true
spin-sdk.workspace = true
serde_json.workspace = true
scraper = "0.18"
wit-bindgen-rt.workspace = true

[package.metadata.component]
package = "component:fetch-markdown"
