[package]
name = "ollama"
license = "MIT"
version.workspace = true
edition.workspace = true

[package.metadata.component]
package = "component:ollama"

[lib]
crate-type = ["cdylib"]

[dependencies]
common.workspace = true
serde.workspace = true
serde_json.workspace = true
spin-executor.workspace = true
wit-bindgen-rt.workspace = true
